--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>vue-adminlte-starter</title>
   </head>
-  <body>
+  <body class="hold-transition sidebar-mini">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
